# python-wallet

./: LICENSE  README.md
1.0-basic-version/: main.py
2.0-basic-oop/: __init__.py  coin.py  main.py  wallet.py
3.0-basic-structure/: .gitignore  Makefile  pyproject.toml  run.sh
3.0-basic-structure/data/: test_wallet.yaml  wallet.yaml
3.0-basic-structure/tests/unit/: test_coin.py
3.0-basic-structure/tests/unit/wallet/: test_wallet.py
3.0-basic-structure/wallet/: __init__.py  __main__.py  wallet.py
3.0-basic-structure/wallet/coin/: coin.py
4.0-hello-fastapi/: .pdm.toml  pyproject.toml  run.sh
4.0-hello-fastapi/app/: main.py
5.0-structured-fastapi/: .gitignore  docker-compose.yaml
5.0-structured-fastapi/backend/app/: alembic.ini  pyproject.toml  run.sh
5.0-structured-fastapi/backend/app/alembic/: README  env.py
5.0-structured-fastapi/backend/app/alembic/versions/: 1fb7745e7409_coin_table.py
5.0-structured-fastapi/backend/app/app/: main.py
5.0-structured-fastapi/backend/app/app/api/: deps.py
5.0-structured-fastapi/backend/app/app/api/api_v1/: api.py
5.0-structured-fastapi/backend/app/app/api/api_v1/endpoints/: coin.py  wallet.py
5.0-structured-fastapi/backend/app/app/core/: config.py
5.0-structured-fastapi/backend/app/app/crud/: __init__.py  crud_coin.py
5.0-structured-fastapi/backend/app/app/db/: base.py
5.0-structured-fastapi/backend/app/app/models/: coin.py
5.0-structured-fastapi/backend/app/app/schemas/: __init__.py  coin.py  wallet.py
Notes/: NOTES.md
