[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.27.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
