[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "fastapi>=0.75.2",
    "uvicorn>=0.17.6",
    "black>=22.3.0",
    "pydantic>=1.9.0",
    "sqlalchemy>=1.4.36",
    "psycopg2>=2.9.3",
    "asyncpg>=0.25.0",
    "alembic>=1.7.7",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
